# user_bin_dir_repo

./: .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  5gwifi.py  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  Pipfile  README.md  __init__.py  bc_remove.sh  binit  bump  code  conftest.py  gitit  h2t  html2txt.py  kill_signals  linkcheck  log_urls.sh  package_metadata.py  pycmd.py  pyproject.toml  quote.js  setup.cfg  setup.py  setup.sh  setup_pip.sh  sidecar_enable_command.sh  ssm  ssm_constants  ssm_debug  ssm_usage  symilar  template  treeps.pl  update_version.sh
.github/workflows/: codeql-analysis.yml
dev/python/: html2txt.py  parse_tags.py  pyreverse  treeps.py
dev/shell/: binit  log_urls.sh  options.sh  ssm  ssm_constants  ssm_debug  ssm_usage
ideas/: gitstatus.py
node/: pretty-quick
repo-0.1.0/: LICENSE  MANIFEST.in  PKG-INFO  README.rst  TODO.rst  setup.py
repo_build/: clone_setup.sh  config_file.sh  find_replace.py  fixpip.sh  ldoc.py  make_gi.zsh  python_build_fix.sh  repip.sh  repo_clean.sh  traps.sh
shell/: swap_proc.sh
sidecar_backup/SidecarCore.framework/: SidecarCore  XPCServices
sidecar_backup/SidecarCore.framework/Versions/A/: SidecarCore
sidecar_backup/SidecarCore.framework/Versions/A/Resources/: Info.plist  framework.sb  version.plist
src/c/: pytest.c  tree
src/hs/: bk_trees.hs
src/python/: bk_trees.py  bluetooth.py  bump.py  dedupe.py  del_dupes.py  file_stats.py  fix_filenames.py  get-pip.py  get_random_words.py  great_readme.md  greppy.py  gvr_test_python_numpy_arrays.py  html2txt.py  log_urls.py  parse_tags.py  py_vs_numpy.py  shell_scripts.py  sunday.py  textfile.py  user.py
src/python/anansi/anansi/: __init__.py
src/python/ls/: ls.py
src/python/melanie/: get_doc.py
src/python/nowandthen/: nowandthen.py
src/python/scutil/: scutil_list
src/python/shell/: _util.py  bump  shell.py
src/python/tests/: test_now_and_then.py
src/python/textfile/: _anyfile.py  _exceptions.py  _util.py  bump  pycmd.py  shell.py  shell_scripts.md  subprocess_3_8_5.py  sunday.py  textfile.py  treeps.py
src/repo_build/: clone_setup.sh  gitit.sh  pycache_remove.sh  python_build_fix.sh  repip.sh  repo_clean.sh  sba.sh
src/shell/: binit.sh  brew_install_utils.sh  commands.sh  do_over  killit.sh  setup_pip.sh  shell_colors.sh  ssm  ssm_constants  ssm_debug  ssm_usage
src/shell/prototypes/: assert_installed.sh  heredocs.sh  ls_alias.sh
tests/: test_html2txt.py
user_bin_dir_repo/: GitHub Readme Format.md  __init__.py  brew_install_utils.sh  deactivate  family_app.md  find_broken.sh  ldoc.sh  log_urls.sh  notes.md  opendiff-w.sh  preman.sh  presuf.sh  pypi.sh  show_ls_colors.sh  speedlog.sh  speedlog_json.sh  vscode.themes.md  watch.sh
(+6 files in other folders)
