[tool.poetry]
	name = "BinRepo"
	version = "0.1.0"
	description = "Dev utilities for MacBook Pro using macOS Big Sur, Zsh, Nuxt.js and Python 3.8+ Development"
	license = "MIT"
	readme = "README.md"

	authors = ["skeptycal <skeptycal@gmail.com>"]
	maintainers = ["skeptycal <skeptycal@gmail.com>"]
	homepage = "https://skeptycal.github.io/user_bin_dir_repo"
	repository = "https://github.com/skeptycal/user_bin_dir_repo"

	keywords = ['macOS', 'setup', 'terminal', 'ci', 'tox', 'cli', 'poetry', 'pyproject', 'toml']

	classifiers = [
		'License :: OSI Approved :: MIT License',
		'Programming Language :: Python',
		'Programming Language :: Python :: 3',
		'Programming Language :: Python :: 3.6',
		'Programming Language :: Python :: 3.7',
		'Programming Language :: Python :: 3.8',
		'Programming Language :: Python :: Implementation :: CPython',
		'Programming Language :: Python :: Implementation :: PyPy',
	]

[tool.poetry.dependencies]
	python = "^3.8"

[tool.poetry.dev-dependencies]
	pip = "^20.2"
	wheel = "^0.34.2"
	setuptools = "^49.2.0"
	pylint = "^2.5.3"
	pytest = "^6.0.0"
	tox = "^3.18.1"
	# flake8 = "^3.8.3"
	# black = "^19.10b0"
	coverage = "^5.2.1"
	pytest-cov = "^2.10.0"
	# tox-travis = "^0.12"
	Sphinx = "^3.1.2"
	sphinx-autobuild = "^0.7.1"
	sphinx-rtd-theme = "^0.5.0"
	autopep8 = "^1.5.4"
	# nose = "^1.3.7"

[build-system]
	requires = ["poetry>=0.12"]
	build-backend = "poetry.masonry.api"

[tool.pyplates]
	twitter_username = "skeptycal"
	github_username = "skeptycal"
	default_jekyll_theme = "minima"
	py_version = "3.8"
	py_versions_tested = "6,7,8,9"
	copyright_start = 2018
	copyright_end = 2020
	package_dir = "{'': 'BinRepo'}"
	package_exclude = ["*test*", "*bak*"]
    fakestuff = "stuff"
